# modular-psu-firmware

./: .gitignore  CMakeLists.txt  CONTRIB.TXT  cmake.bat  cmake64.bat  flow-defs.eez-project  gui-template v3.eez-project-ui-state  modular-psu-firmware.eez-project  readme.md
cmake/: FindSDL2.cmake
core/: alloc.h  eeprom.cpp  hmi.cpp  mouse.h  os.cpp  step_values.h  unit.cpp  util.cpp  util.h  value_types.h
dashboards/: BB3 dashboard.eez-project
doc/: Doxyfile  components.dot  files.md
doc/template/: customdoxygen.css  doxy-boot.js  footer.html  header.html
docs/: map.docx
docs/SCPI reference guide/: .~lock.EEZ BB3 SCPI reference 5.15 - SOURce.odt#  EEZ BB3 SCPI reference - last page.odt  EEZ BB3 SCPI reference - start page.odt  EEZ BB3 SCPI reference 1 - introduction.odt  EEZ BB3 SCPI reference 10 - Programming examples.odt  EEZ BB3 SCPI reference 11 - SCPI commands scheduled for upcoming releases.odt  EEZ BB3 SCPI reference 12 - SCPI commands summary.odt  EEZ BB3 SCPI reference 2 - syntax and style.odt  EEZ BB3 SCPI reference 3 - registers and queue.odt  EEZ BB3 SCPI reference 4 - common comand reference.odt  EEZ BB3 SCPI reference 5.1 - ABORt.odt  EEZ BB3 SCPI reference 5.10 - MEMory.odt  EEZ BB3 SCPI reference 5.11 - MMEMory.odt  EEZ BB3 SCPI reference 5.12 - OUTPut.odt  EEZ BB3 SCPI reference 5.13 - ROUTe.odt  EEZ BB3 SCPI reference 5.13 - SENSe.odt  EEZ BB3 SCPI reference 5.14 - SCRipt.odt  EEZ BB3 SCPI reference 5.14 - SENSe.odt  EEZ BB3 SCPI reference 5.14 - SOURce.odt  EEZ BB3 SCPI reference 5.15 - SENSe.odt  EEZ BB3 SCPI reference 5.15 - SOURce.odt  EEZ BB3 SCPI reference 5.15 - STATus.odt  EEZ BB3 SCPI reference 5.16 - SOURce.odt  EEZ BB3 SCPI reference 5.16 - STATus.odt  EEZ BB3 SCPI reference 5.16 - SYSTem.odt  EEZ BB3 SCPI reference 5.17 - STATus.odt  EEZ BB3 SCPI reference 5.17 - SYSTem.odt  EEZ BB3 SCPI reference 5.17 - TRIGger.odt  EEZ BB3 SCPI reference 5.18 - SYSTem.odt  EEZ BB3 SCPI reference 5.18 - TRIGger.odt  EEZ BB3 SCPI reference 5.19 - TRIGger.odt  EEZ BB3 SCPI reference 5.2 - CALibrate.odt  EEZ BB3 SCPI reference 5.3 - DIAGnostic.odt  EEZ BB3 SCPI reference 5.4 - DISPlay.odt  EEZ BB3 SCPI reference 5.5 - FETCh.odt  EEZ BB3 SCPI reference 5.6 - HCOPy.odt  EEZ BB3 SCPI reference 5.7 - INITiate.odt  EEZ BB3 SCPI reference 5.8 - INSTrument.odt  EEZ BB3 SCPI reference 5.9 - MEASure.odt  EEZ BB3 SCPI reference 5.odt  (+5 more)
flow/: components.h  debugger.cpp  debugger.h  flow.cpp  flow.h  hooks.cpp  hooks.h  private.cpp
flow/components/: call_action.h  expr_eval.cpp  log.cpp  roller_widget.h  show_page.cpp  start.cpp
fonts/: fontello-config (2).json  fontello-config.json
fs/stm32/: fs.cpp
gui/: animation.cpp  app_context.cpp  app_context.h  assets.h  data.cpp  display.cpp  draw.cpp  draw.h  gui.cpp  hooks.h  keypad.cpp  keypad.h  page.cpp  page.h  thread.cpp  thread.h  touch.cpp  touch_calibration.cpp  touch_filter.h  update.cpp  widget.h
gui/widgets/: bar_graph.cpp  bar_graph.h  bitmap.cpp  bitmap.h  button_group.cpp  canvas.cpp  drop_down_list.cpp  gauge.cpp  multiline_text.cpp  progress.cpp  rectangle.cpp  rectangle.h  roller.cpp  scroll_bar.cpp  switch.cpp  text.cpp  toggle_button.cpp  toggle_button.h  yt_graph.h
images/: h25005-simulator-front-panel.ppm
libs/agg/: agg_basics.h
platform/simulator/: display.cpp  events.cpp  touch.cpp
platform/stm32/: display.cpp
scripts/: curve-tracer (N-type).py  curve-tracer (NPN).py  curve-tracer.py  diode-tester-fast.py  diode-tester.py  hello.py  list-digital-input.py  scripts-catalog.json  test.py  transfer-curve (NPN).py  voltage-divider-calculator.py
scripts/CapReform/: CapReform.eez-project  CapReform.py  CapReform.res
scripts/Curve Tracer/: Curve Tracer.eez-project  Curve Tracer.py  Curve Tracer.res
scripts/DC Power App/: DC Power.app  DC Power.eez-project  new 1.txt
scripts/Diode Tester/: Diode Tester.eez-project  Diode Tester.py  Diode Tester.res
scripts/Hello World/: Hello World.eez-project  Hello World.py  Hello World.res
scripts/Module Initialization/: Module Initialization.eez-project  Module Initialization.py  Module Initialization.res
scripts/Op-Amp Calculator/: Op-Amp Calculator.eez-project  Op-Amp Calculator.py  Op-Amp Calculator.res  Op-Amp Calculator.res.map
scripts/Output Stepper/: Output Stepper.eez-project  Output Stepper.py  Output Stepper.res
scripts/Parallel and Series Calculator/: Parallel and Series Calculator.eez-project  Parallel and Series Calculator.py  Parallel and Series Calculator.res
scripts/Relay loop test/: relay loop test.app  relay loop test.eez-project
scripts/Voltage Divider Calculator/: Voltage Divider Calculator.eez-project  Voltage Divider Calculator.py  Voltage Divider Calculator.res
scripts/Voltage Stepper/: Voltage Stepper.eez-project  Voltage Stepper.py  Voltage Stepper.res
scripts/Voltage divider calculator/: Voltage Divider Calculator.eez-project  Voltage Divider Calculator.py  Voltage Divider Calculator.res
scripts/voltage-divider-calculator/: voltage-divider-calculator.eez-project  voltage-divider-calculator.eez-project-ui-state  voltage-divider-calculator.py  voltage-divider-calculator.res
src/bb3/: action_impl.cpp  assets.cpp  assets_V2.cpp  dlog_file.cpp  dlog_file.h  file_type.cpp  file_type.h  firmware.cpp  firmware.h  fs_driver.cpp  fs_driver.h  function_generator.cpp  function_generator.h  hmi.cpp  hmi.h  index.cpp  index.h  keyboard.cpp  keyboard.h  main.cpp  memory.cpp  memory.h  mouse.cpp  mouse.h  mqtt.cpp  mqtt.h  sound.cpp  system.cpp  system.h  tasks.cpp  tasks.h  uart.cpp  uart.h  usb.cpp
src/eez/: action_impl.cpp  alloc.cpp  alloc.h  debug.cpp  debug.h  dlog_file.cpp  dlog_file.h  eeprom.cpp  eeprom.h  encoder.h  file_type.cpp  file_type.h  firmware.cpp  firmware.h  flow.cpp  flow.h  flow_defs_v3.h  fs_driver.cpp  fs_driver.h  function_generator.cpp  function_generator.h  hmi.cpp  hmi.h  idle.cpp  idle.h  index.cpp  index.h  keyboard.cpp  keyboard.h  main.cpp  memory.cpp  memory.h  mouse.cpp  mouse.h  mp.cpp  mp.h  mqtt.cpp  mqtt.h  os.cpp  os.h  (+17 more)
src/eez-framework/: library.json  library.properties
(+1244 files in other folders)
